Further implemented TypeMapping.